# reaspeech

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.gpu  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check-reascripts.yml  docker-publish.yml  publish-release-notes.yml  release.yml
app/: .gitignore  logging.conf  run.py  run.sh  webservice.py  worker.py
app/faster_whisper/: constants.py  core.py  utils.py
app/mlx_whisper/: constants.py  core.py
app/openai_whisper/: core.py
app/script_matching/: script_matching.py
app/templates/: base.html  index.html  nav.html  reascript.lua
app/util/: apierror.py  audio.py
app/whisper_cpp/: constants.py  core.py  model.py
docs/: CONTRIBUTING.md  development.md  docker.md  getting-started.md  no-docker.md  nodocker.md
reascripts/: LICENSE  Makefile
reascripts/ReaSpeech/: .luacheckrc  Makefile  ReaSpeechDev.lua  version.lua
reascripts/ReaSpeech/examples/: response_data_json.lua
reascripts/ReaSpeech/libs/: ToolWindow.lua
reascripts/ReaSpeech/resources/icons/: .fontello  Makefile
reascripts/ReaSpeech/resources/icons/fontello/: config.json  demo.html
reascripts/ReaSpeech/resources/icons/fontello/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
reascripts/ReaSpeech/resources/icons/fontello/font/: fontello.eot
reascripts/ReaSpeech/resources/images/: Makefile  README.md  heading-logo-tech-audio.lua  reaspeech-banner.lua  reaspeech-logo-small.lua  reaspeech-logo.lua
reascripts/ReaSpeech/source/: ASRActions.lua  ASRControls.lua  ASRPlugin.lua  AlertPopup.lua  CSVWriter.lua  ColumnLayout.lua  CurlRequest.lua  DetectLanguageActions.lua  DetectLanguageControls.lua  DetectLanguagePlugin.lua  ExecProcess.lua  Fonts.lua  Icons.lua  IntervalFunction.lua  KeyMap.lua  Logging.lua  ReaSpeechAPI.lua  ReaSpeechActionsUI.lua  ReaSpeechControlsUI.lua  ReaSpeechEULAContent.lua  ReaSpeechMain.lua  ReaSpeechPlugins.lua  ReaSpeechProductActivation.lua  ReaSpeechProductActivationUI.lua  ReaSpeechUI.lua  ReaSpeechWelcomeUI.lua  ReaSpeechWidgets.lua  ReaSpeechWorker.lua  SRTWriter.lua  SampleMultipleUploadActions.lua  SampleMultipleUploadControls.lua  SampleMultipleUploadPlugin.lua  SettingsActions.lua  SettingsControls.lua  SettingsPlugin.lua  Theme.lua  Transcript.lua  TranscriptAnnotations.lua  TranscriptAnnotationsUI.lua  TranscriptEditor.lua  (+10 more)
reascripts/ReaSpeech/source/components/widgets/: Button.lua  ButtonBar.lua  Checkbox.lua  Combo.lua  FileSelector.lua  ListBox.lua  NumberInput.lua  TabBar.lua  TextInput.lua
reascripts/ReaSpeech/source/include/: globals.lua  header.lua  main.lua
reascripts/ReaSpeech/source/libs/: Ctx.lua  CurlRequest.lua  ExecProcess.lua  IntervalFunction.lua  Logging.lua  PathUtil.lua  Plugin.lua  Polo.lua  ReaUtil.lua  StringUtils.lua  TableUtils.lua  ToolWindow.lua
reascripts/ReaSpeech/source/main/: ReaSpeechAPI.lua  ReaSpeechMain.lua  ReaSpeechWorker.lua  Transcript.lua  TranscriptSegment.lua  TranscriptWord.lua
reascripts/ReaSpeech/source/ui/: ASRActions.lua  ASRControls.lua  ASRPlugin.lua  AlertPopup.lua  ColumnLayout.lua  DetectLanguageActions.lua  DetectLanguageControls.lua  DetectLanguagePlugin.lua  Fonts.lua  Icons.lua  KeyMap.lua  Locale.lua  ReaSpeechControlsUI.lua  ReaSpeechPlugins.lua  ReaSpeechUI.lua  ReaSpeechWelcomeUI.lua  ReaSpeechWidgets.lua  SampleMultipleUploadActions.lua  SampleMultipleUploadControls.lua  SampleMultipleUploadPlugin.lua  SettingsActions.lua  SettingsControls.lua  SettingsPlugin.lua  Strings.lua  Theme.lua  TranscriptAnnotations.lua  TranscriptAnnotationsUI.lua  TranscriptEditor.lua  TranscriptExporter.lua  TranscriptImporter.lua  TranscriptUI.lua  WhisperModels.lua  Widgets.lua
reascripts/ReaSpeech/source/ui/localization/: Strings.en.lua  Strings.pt.lua
reascripts/ReaSpeech/source/ui/widgets/: Button.lua  ButtonBar.lua  Checkbox.lua  Combo.lua  FileSelector.lua  ListBox.lua  NumberInput.lua  TabBar.lua  TextInput.lua
reascripts/ReaSpeech/tests/: TestCSVWriter.lua  TestColumnLayout.lua  TestFonts.lua  TestLogging.lua  TestPlugin.lua  TestReaSpeechUI.lua  TestSRTWriter.lua  TestToolWindow.lua  TestTranscript.lua  TestTranscriptAnnotations.lua  TestTween.lua  TestWidgets.lua  mock_reaper.lua
reascripts/ReaSpeech/tests/libs/: TestEnvUtil.lua  TestImGuiTheme.lua  TestPathUtil.lua  TestPlugin.lua  TestPolo.lua  TestReaUtil.lua  TestStorage.lua  TestStringUtils.lua  TestTableUtils.lua  TestToolWindow.lua
reascripts/ReaSpeech/tests/ui/: TestStrings.lua
reascripts/common/: .luacheckrc  Makefile
reascripts/common/libs/: EnvUtil.lua  ExecProcess.lua  ImGuiTheme.lua  OptionsConfig.lua  PathUtil.lua  Polo.lua  ReaIter.lua  ReaUtil.lua  Storage.lua  Tempfile.lua  Trap.lua  mock_reaper.lua
reascripts/common/scripts/: png_to_lua.rb
reascripts/common/tests/: TestEnvUtil.lua  TestImGuiTheme.lua  TestOptionsConfig.lua  TestPathUtil.lua  TestPolo.lua  TestReaUtil.lua  TestStorage.lua  TestTableUtils.lua
scripts/: png_to_lua.rb  reawatch  reawatch-gpu  reawatch-gpu.bat  reawatch.bat  release.py  run.sh
