[project]
name = "reaspeech"
version = "1.0.0"
description = "Speech recognition for REAPER"
authors = [
    { name = "Dave Benjamin" },
    { name = "Mike DeFreitas" },
    { name = "Roel Sanchez" },
]
requires-python = "~=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "aiofiles>=24.1.0,<25",
    "celery>=5.4.0,<6",
    "ctranslate2==4.3.1",
    "fastapi>=0.115.5,<0.116",
    "faster-whisper>=1.1.0,<2",
    "ffmpeg-python>=0.2.0,<0.3",
    "gunicorn>=23.0.0,<24",
    "jinja2>=3.1.4,<4",
    "llvmlite>=0.39.1,<0.40",
    "numba>=0.56.4,<0.57",
    "openai-whisper==20240930",
    "python-multipart>=0.0.17,<0.0.18",
    "pywhispercpp>=1.3.0,<2",
    "sqlalchemy>=2.0.36,<3",
    "torch>=2.5.1",
    "tqdm>=4.67.0,<5",
    "unidecode>=1.3.8,<2",
    "uvicorn[standard]>=0.32.1,<0.33",
]

[project.urls]
Homepage = "https://github.com/TeamAudio/reaspeech/"

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
